test/Driver/no-inputs.code
// RUN: %languagec_driver_plain -v 2>&1 | %FileCheck %s
// RUN: %languagec_driver_plain -v -whole-module-optimization 2>&1 | %FileCheck %s
// RUN: not %languagec_driver_plain -emit-executable 2>&1 | %FileCheck --check-prefix=CHECK-ERROR %s

// CHECK-NOT: error: no input files

// CHECK-ERROR: error: no input files
